--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+/*added google font*/
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap');
+
+
+
 * {
     padding: 0;
     margin: 0;
@@ -9,11 +14,16 @@ body {
     display: flex;
     flex-direction: column;
     color: #3a3a3a;
+    font-family: 'Lato' sans-serif;
 }
 
 
 header {
     background-color: lightcoral;
+}
+
+h1 {
+    font-family: 'Oswald' sans-serif;
 }
 
 main {
