--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,3 +89,25 @@ main {
 footer {
     background-color: rgb(231, 223, 206);
 }
+
+@media screen and (min-width: 768px) {
+    nav {
+        display: block;
+        position: relative;
+        box-shadow: none;
+        width: fit-content;
+        padding-right: 1rem;
+    }
+
+    #menu {
+        display: flex;
+    }
+
+    #menu > li {
+        padding: 1rem;
+    }
+
+    .nav-toggle-label {
+        display: none;
+    }
+}
