--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,9 @@ footer {
     background-color: rgb(231, 223, 206);
 }
 
+/* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
+    /* Header */
     nav {
         display: block;
         position: relative;
@@ -104,7 +106,7 @@ footer {
     }
 
     #menu > li {
-        padding: 1rem;
+        padding-left: 1rem;
     }
 
     .nav-toggle-label {
@@ -117,7 +119,15 @@ footer {
         margin: 0 0.5rem;
     }
 
+    /* Main content */
     main {
+        /* Push main content down to accommodate larger header */
         margin-top: 79px;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    #menu a:hover {
+        border-bottom: 1px solid #3a3a3a;
     }
 }
