--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,9 +81,15 @@ nav {
 }
 
 main {
-    background-color: lightblue;
+
     flex: 1 0 auto;
     margin-top: 47px;
+}
+
+#hero {
+    height: 600px;
+    width: 100%;
+    background: url("../images/hero-image code.webp") no-repeat center center/cover;
 }
 
 footer {
