--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,13 @@ body {
     font-family: 'Lato' sans-serif;
 }
 
+h1, h2, h3 {
+    font-family: 'Oswald' sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #252525;
+}
+
 
 header {
     background-color: #ffffff;
@@ -35,12 +42,7 @@ header a {
     color: inherit;
 }
 
-h1 {
-    font-family: 'Oswald' sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    color: #252525;
-}
+
 
 #menu {
     font-size: 110%;
@@ -90,6 +92,46 @@ main {
     height: 600px;
     width: 100%;
     background: url("../images/hero-image code.webp") no-repeat center center/cover;
+    position: relative;
+}
+
+#cover-text {
+    background-color: rgba(241, 109, 107, .7);
+    font-size: 130%;
+    position: absolute;
+    bottom: 30px;
+    width: 80%;
+    min-height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+}
+
+#cover-text > h2, #cover-text > h3 {
+    color: #ffffff;
+}
+
+#reasons {
+    width: 90%;
+    margin: 20px auto;
+}
+
+#reason h2 {
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 280%;
+}
+
+#benefits-fisical > div, #benefits-mental > div {
+    line-height: 20px;
+    margin-bottom: 20px;
+}
+
+#benefits p {
+    padding: 0 20px;
+}
+
+hr {
+    border-top: 1px solid #3a3a3a;
 }
 
 footer {
@@ -129,6 +171,11 @@ footer {
     main {
         /* Push main content down to accommodate larger header */
         margin-top: 79px;
+    }
+
+    #cover-text {
+        width: 300px;
+        right: 50px;
     }
 }
 
