--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,6 +175,15 @@ hr {
     color: #fafafa;
 }
 
+#photos img {
+    width: 100%;
+    line-height: 1em;
+}
+
+#photos {
+    line-height: 0;
+}
+
 /* Footer */
 #social-networks {
     text-align: center;
