--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,6 +203,13 @@ footer {
     background-color: rgb(231, 223, 206);
 }
 
+@media screen and (min-width: 576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
+}
+
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
     /* Header */
@@ -278,7 +285,12 @@ footer {
         border-bottom: 1px solid #3a3a3a;
     }
 
+    #photos {
+        column-count: 3;
+    }
+
 }
+
 
 @media screen and (min-width: 1200px) {
 
